fdo#49120 - Implementig XML_state

Change-Id: If4779aeb5301bb3e422ceb6a4029ddf5542ab03d
Reviewed-on: https://gerrit.libreoffice.org/3222
Reviewed-by: Németh László <nemeth@numbertext.org>
Tested-by: Németh László <nemeth@numbertext.org>
Signed-off-by: Andras Timar <atimar@suse.com>